--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "firstproject",
+  "homepage": "https://RoshanTambe44.github.io/mEccomerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
     "axios": "^1.6.0",
     "cra-template": "1.2.0",
+    "gh-pages": "^6.0.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -12,6 +15,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
