--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firstproject",
-  "homepage": "https://RoshanTambe44.github.io/mEccomerce",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
